# gnosis_pay_mvp

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
scripts/: create_mailtm_account.py  poll_mailtm_otp.py
src/: main.rs
src/sdk/: client.rs  mod.rs  models.rs  wallet.rs
