[package]
name = "gnosis_pay_mvp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MVP CLI application for Gnosis Pay Authentication and KYC Source of Funds questions."

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
ethers-core = "2.0"
ethers-signers = "2.0"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
